--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,8 @@ argon2_cffi==21.1.0
 Flask_JWT_Extended==4.3.1
 marshmallow==3.14.0
 Flask_SQLAlchemy==2.5.1
-Flask==2.0.2
+Flask
 marshmallow_sqlalchemy==0.26.1
-Werkzeug==2.0.2
 argon2==0.1.10
 python_bcrypt==0.3.2
 SQLAlchemy~=1.4.26
@@ -14,3 +13,6 @@ uuid
 flask-marshmallow
 Flask-Migrate
 psycopg2-binary
+Jinja2==2.10.3
+MarkupSafe==1.1.1
+Werkzeug==0.16.0
