--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,36 @@
-flask_restful==0.3.9
-flask-cors==3.0.10
-argon2_cffi==21.1.0
-Flask_JWT_Extended==4.3.1
-marshmallow==3.14.0
-Flask_SQLAlchemy==2.5.1
-Flask
-marshmallow_sqlalchemy==0.26.1
+alembic==1.7.7
+aniso8601==9.0.1
 argon2==0.1.10
-python_bcrypt==0.3.2
-SQLAlchemy~=1.4.26
-uuid
-flask-marshmallow
-Flask-Migrate
-psycopg2-binary
-Jinja2==2.10.3
-MarkupSafe==1.1.1
-Werkzeug==0.16.0
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+certifi==2021.10.8
+cffi==1.15.0
+click==8.1.2
+Flask==2.1.1
+Flask-Cors==3.0.10
+Flask-JWT-Extended==4.3.1
+flask-marshmallow==0.14.0
+Flask-Migrate==3.1.0
+Flask-RESTful==0.3.9
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.2
+importlib-metadata==4.11.3
+importlib-resources==5.6.0
+itsdangerous==2.1.2
+Jinja2==3.1.1
+Mako==1.2.0
+MarkupSafe==2.1.1
+marshmallow==3.15.0
+marshmallow-sqlalchemy==0.28.0
+packaging==21.3
+psycopg2-binary==2.9.3
+pycparser==2.21
+PyJWT==2.3.0
+pyparsing==3.0.7
+python-bcrypt==0.3.2
+pytz==2022.1
+six==1.16.0
+SQLAlchemy==1.4.34
+uuid==1.30
+Werkzeug==2.1.1
+zipp==3.7.0
