--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,9 +5,7 @@ phases:
     commands:
       - echo STARTING TEST
       - set -e
-      - export API_UUID="89a07f6d-9336-472b-bfe5-949a5da8dc81"
-      - export LOCAL_DB_FILE=True
-      - echo "$LOCAL_DB_FILE"
+      - echo "$API_UUID"
       - pip3 install -r requirements.txt
       - python3 -m unittest -v backtest
       - echo TEST DONE
