--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,6 +11,7 @@ phases:
       - echo TEST DONE
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 552513699221.dkr.ecr.us-east-1.amazonaws.com
+      - echo logged!!!
   build:
     commands:
       - echo Build started on `date`
